# winrpmdepscalc

./: .gitignore  README.md  pyproject.toml  requirements.txt  winrpmdepscalc.py
.github/workflows/: github.yml  main.yml  pypi.yml  release.yml
javascript/: get-epo-packages-list.js  tampermonkey-epel-downloader.js
powershell/: runps1.cmd
python/: winrpmdepscalc.py  winrpmdepscalc.py.bak
python/winrpmdepscalc/: config.yaml  requirements.txt  winrpmdepscalc.py
script/: requirements.txt  winrpmdepscalc.py
src/: winrpmdepscalc.py
src/winrpmdepscalc/: cli.py  metadata_manager.py  operations.py
