[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "winrpmdepscalc"
version = "1.0.0"
description = "Windows RPM Package Metadata Calculator Tool"
authors = [{ name = "Maulusck✖Perplexity", email = "maulusck@pm.me" }]
license = "WTFPL"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
]

dependencies = ["requests", "PyYAML", "tqdm", "urllib3"]

[project.urls]
Home-page = "https://github.com/maulusck/winrpmdepscalc"

[project.scripts]
winrpmdepscalc = "winrpmdepscalc.cli:main"
